--- a/guess-the-number.html
+++ b/guess-the-number.html
@@ -108,9 +108,11 @@
                                 </ul>
                             </div>
                         </li>
-                        <!-- <li>
-                            <a href="https://twitter.com/ZKaizoku_" target="_blank"><i class="icon-Twitter"></i> Twitter</a>
-                        </li> -->
+                        <li>
+                            <a href="https://twitter.com/ZKaizoku_" target="_blank">
+                                <i class="icon-Twitter"></i> Twitter
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -292,16 +294,42 @@
 
         <footer>
             <div class="mask"></div>
-            <ul class="sns">
+            <!-- <img class="popUp--open" for="mission" src="img/daily-mission.png"> -->
+            <!-- <ul class="sns">
                 <li>
-                    <button class="btn-rounded"><i class="icon-Twitter"></i></button>
+                    <button class="btn-rounded" onclick="window.open('https://twitter.com/ZKaizoku_')">
+                        <i class="icon-Twitter"></i>
+                    </button>
                 </li>
-            </ul>
+                <li>
+                    <button class="btn-rounded"><i class="icon-Telegram"></i></button>
+                </li>
+            </ul> -->
         </footer>
 
 
 
 
+
+        <!-- 預設 pop up -->
+        <div id="info" class="popUp">
+            <div class="popUp--container">
+                <button class="popUp--close"><i class="icon-Close"></i></button>
+                <h3>這是一個預設彈窗</h3>
+                <div class="popUp--content">
+                    <p>彈窗的內文放這裡</p>
+                    <ol>
+                        <li>也可以條列式</li>
+                        <li>放置內文</li>
+                        <li>或是<a href="">超連結</a></li>
+                    </ol>
+                </div>
+                <div class="popUp--btns">
+                    <button class="btn-tertiary close">取消</button>
+                    <button class="submit">確認</button>
+                </div>
+            </div>
+        </div>
 
         <!-- pop up 連接錢包 -->
         <div id="login" class="popUp">
@@ -326,26 +354,6 @@
 					<button class="btn-tertiary">取消</button>
 					<button class="submit">確認</button>
 				</div> -->
-            </div>
-        </div>
-
-        <!-- 預設 pop up -->
-        <div id="info" class="popUp">
-            <div class="popUp--container">
-                <button class="popUp--close"><i class="icon-Close"></i></button>
-                <h3>這是一個預設彈窗</h3>
-                <div class="popUp--content">
-                    <p>彈窗的內文放這裡</p>
-                    <ol>
-                        <li>也可以條列式</li>
-                        <li>放置內文</li>
-                        <li>或是<a href="">超連結</a></li>
-                    </ol>
-                </div>
-                <div class="popUp--btns">
-                    <button class="btn-tertiary close">取消</button>
-                    <button class="submit">確認</button>
-                </div>
             </div>
         </div>
 
