--- a/shop.html
+++ b/shop.html
@@ -108,9 +108,11 @@
                                 </ul>
                             </div>
                         </li>
-                        <!-- <li>
-                            <a href="https://twitter.com/ZKaizoku_" target="_blank"><i class="icon-Twitter"></i> Twitter</a>
-                        </li> -->
+                        <li>
+                            <a href="https://twitter.com/ZKaizoku_" target="_blank">
+                                <i class="icon-Twitter"></i> Twitter
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -149,7 +151,7 @@
                                 <button onclick="location='shop-detail.html'">查看商品</button>
                             </div>
                         </li>
-                        <li>
+                        <!-- <li>
                             <div class="img">
                                 <img src="img/product02.jpg">
                             </div>
@@ -158,7 +160,7 @@
                                 <p>商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品商品說明商品說明商品</p>
                                 <button onclick="location='shop-detail.html'">查看商品</button>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
@@ -166,11 +168,17 @@
 
         <footer>
             <div class="mask"></div>
-            <ul class="sns">
+            <!-- <img class="popUp--open" for="mission" src="img/daily-mission.png"> -->
+            <!-- <ul class="sns">
                 <li>
-                    <button class="btn-rounded"><i class="icon-Twitter"></i></button>
+                    <button class="btn-rounded" onclick="window.open('https://twitter.com/ZKaizoku_')">
+                        <i class="icon-Twitter"></i>
+                    </button>
                 </li>
-            </ul>
+                <li>
+                    <button class="btn-rounded"><i class="icon-Telegram"></i></button>
+                </li>
+            </ul> -->
         </footer>
 
 
@@ -208,10 +216,17 @@
 
     <!-- jQuery -->
     <script src="vendor/jquery.min.js"></script>
+    <script type="text/javascript">
+        var mediaPC = window.matchMedia('(max-width: 1440px)')
+        var mediaLaptop = window.matchMedia('(max-width: 1280px)')
+        var mediaPad = window.matchMedia('(max-width: 1024px)')
+        var mediaSmallPad = window.matchMedia('(max-width: 768px)')
+        var mediaMobile = window.matchMedia('(max-width: 516px)')
+        var mediaSmallMobile = window.matchMedia('(max-width: 320px)')
+    </script>
 
     <!-- Custom settings -->
     <script src="js/navigation.js"></script>
-    <script src="js/menu.js"></script>
     <script src="js/dropdown.js"></script>
     <script src="js/fulldown.js"></script>
     <script src="js/tab.js"></script>
